# lead_scoring_model

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: SETUP.md
.github/workflows/: ci-cd.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  scoring.py
app/core/: config.py  constants.py  data_lake.py  metrics.py
app/middleware/: logging.py  security.py
app/models/: predictor.py  schemas.py
scripts/: docker_build.sh  run_tests.sh
tests/: conftest.py  test_load.py  test_scoring.py
